--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -106,6 +106,38 @@ header ul li a.active {
   text-align: left;
   font-style: normal;
   font-weight: 100;
+  font-size: 184px;
+  line-height: 243px;
+  font-family: 'Helvetica Neue', sans-serif;
+  letter-spacing: -11.04px;
+  color: #0e112c;
+  opacity: 1;
+}
+
+.small-text {
+  padding-left: 10px;
+  margin-bottom: -50px;
+}
+.one,
+.coat {
+  font-size: 50px;
+  text-align: left;
+  letter-spacing: -3px;
+  line-height: 68px;
+
+  color: #175e6c;
+}
+.one {
+  font-family: 'Avenir Roman', sans-serif;
+}
+.coat {
+  font-family: 'Avenir Heavy', sans-serif;
+}
+/*
+.large-text {
+  text-align: left;
+  font-style: normal;
+  font-weight: 100;
   font-size: 302px;
   line-height: 243px;
   font-family: 'Helvetica Neue', sans-serif;
@@ -113,7 +145,7 @@ header ul li a.active {
   color: #0e112c;
   opacity: 1;
   margin-top: 75px;
-}
+}*/
 
 .bg {
   background: #f8f8f8;
