--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -106,6 +106,7 @@ header ul li a.active {
 	text-align: left;
 	font-style: normal;
 	font-weight: 100;
+	height: 185px;
 	font-size: 184px;
 	line-height: 243px;
 	font-family: 'Helvetica Neue', sans-serif;
