--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -134,6 +134,28 @@ header ul li a.active {
 .coat {
 	font-family: 'Avenir Heavy', sans-serif;
 }
+
+.video {
+	width: 100%;
+	height: 100%;
+	margin: 0;
+}
+
+.center1 {
+	width: 1600px;
+	max-width: 96%;
+	margin: 0 auto;
+}
+.center2 {
+	width: 1400px;
+	max-width: 96%;
+	margin: 0 auto;
+}
+.center3 {
+	width: 1200px;
+	max-width: 96%;
+	margin: 0 auto;
+}
 /*
 .large-text {
   text-align: left;
