--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -122,6 +122,7 @@ header ul li a.active {
 	margin-right: 8px; /* İkon ile input arasındaki boşluk */
 	width: 20px; /* İkon boyutu */
 	height: 20px; /* İkon boyutu */
+	margin-bottom: 7px;
 }
 
 .search-input {
